paper: first draft of TYPES submission essentially finished

--- a/paper/types-2022-postproceedings/types-2022-postproceedings.bib
+++ b/paper/types-2022-postproceedings/types-2022-postproceedings.bib
@@ -20,6 +20,188 @@
   year = 1995
 }
 
+@inproceedings{DBLP:conf/csl/MoserZ03,
+  author    = {Georg Moser and
+               Richard Zach},
+  editor    = {Matthias Baaz and
+               Johann A. Makowsky},
+  title     = {The Epsilon Calculus (Tutorial)},
+  booktitle = {Computer Science Logic, 17th International Workshop, {CSL} 2003, 12th
+               Annual Conference of the EACSL, and 8th Kurt G{\"{o}}del Colloquium,
+               {KGC} 2003, Vienna, Austria, August 25-30, 2003, Proceedings},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {2803},
+  pages     = {455},
+  publisher = {Springer},
+  year      = {2003},
+  url       = {https://doi.org/10.1007/978-3-540-45220-1\_36},
+  doi       = {10.1007/978-3-540-45220-1\_36},
+  timestamp = {Tue, 14 May 2019 10:00:42 +0200},
+  biburl    = {https://dblp.org/rec/conf/csl/MoserZ03.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/tphol/Gordon91,
+  author    = {Michael J. C. Gordon},
+  editor    = {Myla Archer and
+               Jeffrey J. Joyce and
+               Karl N. Levitt and
+               Phillip J. Windley},
+  title     = {Introduction to the {HOL} System},
+  booktitle = {Proceedings of the 1991 International Workshop on the {HOL} Theorem
+               Proving System and its Applications, August 1991, Davis, California,
+               {USA}},
+  pages     = {2--3},
+  publisher = {{IEEE} Computer Society},
+  year      = {1991},
+  timestamp = {Wed, 17 Apr 2002 08:13:51 +0200},
+  biburl    = {https://dblp.org/rec/conf/tphol/Gordon91.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@incollection{DBLP:books/crc/CRCcompiler2007/SanyalK07,
+  author    = {Amitabha Sanyal and
+               Uday P. Khedker},
+  editor    = {Y. N. Srikant and
+               Priti Shankar},
+  title     = {Garbage Collection Techniques},
+  booktitle = {The Compiler Design Handbook: Optimizations and Machine Code Generation,
+               Second Edition},
+  pages     = {6},
+  publisher = {{CRC} Press},
+  year      = {2007},
+  timestamp = {Sun, 04 Aug 2019 17:44:34 +0200},
+  biburl    = {https://dblp.org/rec/books/crc/CRCcompiler2007/SanyalK07.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/popl/IshtiaqO01,
+  author    = {Samin S. Ishtiaq and
+               Peter W. O'Hearn},
+  editor    = {Chris Hankin and
+               Dave Schmidt},
+  title     = {{BI} as an Assertion Language for Mutable Data Structures},
+  booktitle = {Conference Record of {POPL} 2001: The 28th {ACM} {SIGPLAN-SIGACT}
+               Symposium on Principles of Programming Languages, London, UK, January
+               17-19, 2001},
+  pages     = {14--26},
+  publisher = {{ACM}},
+  year      = {2001},
+  url       = {https://doi.org/10.1145/360204.375719},
+  doi       = {10.1145/360204.375719},
+  timestamp = {Sat, 31 Jul 2021 17:22:15 +0200},
+  biburl    = {https://dblp.org/rec/conf/popl/IshtiaqO01.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/lics/Reynolds02,
+  author    = {John C. Reynolds},
+  title     = {Separation Logic: {A} Logic for Shared Mutable Data Structures},
+  booktitle = {17th {IEEE} Symposium on Logic in Computer Science {(LICS} 2002),
+               22-25 July 2002, Copenhagen, Denmark, Proceedings},
+  pages     = {55--74},
+  publisher = {{IEEE} Computer Society},
+  year      = {2002},
+  url       = {https://doi.org/10.1109/LICS.2002.1029817},
+  doi       = {10.1109/LICS.2002.1029817},
+  timestamp = {Wed, 16 Oct 2019 14:14:54 +0200},
+  biburl    = {https://dblp.org/rec/conf/lics/Reynolds02.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/icfp/Norell13,
+  author    = {Ulf Norell},
+  editor    = {Greg Morrisett and
+               Tarmo Uustalu},
+  title     = {Interactive programming with dependent types},
+  booktitle = {{ACM} {SIGPLAN} International Conference on Functional Programming,
+               ICFP'13, Boston, MA, {USA} - September 25 - 27, 2013},
+  pages     = {1--2},
+  publisher = {{ACM}},
+  year      = {2013},
+  url       = {https://doi.org/10.1145/2500365.2500610},
+  doi       = {10.1145/2500365.2500610},
+  timestamp = {Thu, 24 Jun 2021 16:19:30 +0200},
+  biburl    = {https://dblp.org/rec/conf/icfp/Norell13.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/jfp/Brady13,
+  author    = {Edwin C. Brady},
+  title     = {Idris, a general-purpose dependently typed programming language: Design
+               and implementation},
+  journal   = {J. Funct. Program.},
+  volume    = {23},
+  number    = {5},
+  pages     = {552--593},
+  year      = {2013},
+  url       = {https://doi.org/10.1017/S095679681300018X},
+  doi       = {10.1017/S095679681300018X},
+  timestamp = {Sun, 21 Jun 2020 17:42:23 +0200},
+  biburl    = {https://dblp.org/rec/journals/jfp/Brady13.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/ecoop/Brady21,
+  author    = {Edwin C. Brady},
+  editor    = {Anders M{\o}ller and
+               Manu Sridharan},
+  title     = {Idris 2: Quantitative Type Theory in Practice},
+  booktitle = {35th European Conference on Object-Oriented Programming, {ECOOP} 2021,
+               July 11-17, 2021, Aarhus, Denmark (Virtual Conference)},
+  series    = {LIPIcs},
+  volume    = {194},
+  pages     = {9:1--9:26},
+  publisher = {Schloss Dagstuhl - Leibniz-Zentrum f{\"{u}}r Informatik},
+  year      = {2021},
+  url       = {https://doi.org/10.4230/LIPIcs.ECOOP.2021.9},
+  doi       = {10.4230/LIPIcs.ECOOP.2021.9},
+  timestamp = {Sun, 25 Jul 2021 11:47:10 +0200},
+  biburl    = {https://dblp.org/rec/conf/ecoop/Brady21.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/nfm/Hurd11,
+  author    = {Joe Hurd},
+  editor    = {Mihaela Gheorghiu Bobaru and
+               Klaus Havelund and
+               Gerard J. Holzmann and
+               Rajeev Joshi},
+  title     = {The OpenTheory Standard Theory Library},
+  booktitle = {{NASA} Formal Methods - Third International Symposium, {NFM} 2011,
+               Pasadena, CA, USA, April 18-20, 2011. Proceedings},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {6617},
+  pages     = {177--191},
+  publisher = {Springer},
+  year      = {2011},
+  url       = {https://doi.org/10.1007/978-3-642-20398-5\_14},
+  doi       = {10.1007/978-3-642-20398-5\_14},
+  timestamp = {Tue, 14 May 2019 10:00:53 +0200},
+  biburl    = {https://dblp.org/rec/conf/nfm/Hurd11.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/itp/KumarH12,
+  author    = {Ramana Kumar and
+               Joe Hurd},
+  editor    = {Lennart Beringer and
+               Amy P. Felty},
+  title     = {Standalone Tactics Using OpenTheory},
+  booktitle = {Interactive Theorem Proving - Third International Conference, {ITP}
+               2012, Princeton, NJ, USA, August 13-15, 2012. Proceedings},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {7406},
+  pages     = {405--411},
+  publisher = {Springer},
+  year      = {2012},
+  url       = {https://doi.org/10.1007/978-3-642-32347-8\_28},
+  doi       = {10.1007/978-3-642-32347-8\_28},
+  timestamp = {Tue, 14 May 2019 10:00:37 +0200},
+  biburl    = {https://dblp.org/rec/conf/itp/KumarH12.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 @misc { arm-vmsa,
   author = {Arm},
   howpublished = {\url{https://developer.arm.com/documentation/ddi0406/b/System-Level-Architecture/Virtual-Memory-System-Architecture--VMSA-}},
@@ -48,6 +230,59 @@
   isbn      = {3-540-09724-4},
   timestamp = {Tue, 14 May 2019 10:00:35 +0200},
   biburl    = {https://dblp.org/rec/books/sp/Gordon79.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/icfp/StampoulisS10,
+  author    = {Antonis Stampoulis and
+               Zhong Shao},
+  editor    = {Paul Hudak and
+               Stephanie Weirich},
+  title     = {VeriML: typed computation of logical terms inside a language with
+               effects},
+  booktitle = {Proceeding of the 15th {ACM} {SIGPLAN} international conference on
+               Functional programming, {ICFP} 2010, Baltimore, Maryland, USA, September
+               27-29, 2010},
+  pages     = {333--344},
+  publisher = {{ACM}},
+  year      = {2010},
+  url       = {https://doi.org/10.1145/1863543.1863591},
+  doi       = {10.1145/1863543.1863591},
+  timestamp = {Thu, 14 Oct 2021 09:54:39 +0200},
+  biburl    = {https://dblp.org/rec/conf/icfp/StampoulisS10.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@phdthesis{DBLP:phd/dnb/Jung20,
+  author    = {Ralf Jung},
+  title     = {Understanding and evolving the Rust programming language},
+  school    = {Saarland University, Saarbr{\"{u}}cken, Germany},
+  year      = {2020},
+  url       = {https://publikationen.sulb.uni-saarland.de/handle/20.500.11880/29647},
+  urn       = {urn:nbn:de:bsz:291--ds-319465},
+  timestamp = {Sat, 17 Jul 2021 09:07:32 +0200},
+  biburl    = {https://dblp.org/rec/phd/dnb/Jung20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{Bruijn1972LambdaCN,
+  title={Lambda calculus notation with nameless dummies, a tool for automatic formula manipulation, with application to the Church-Rosser theorem},
+  author={de Ng Dick Bruijn},
+  journal={Studies in logic and the foundations of mathematics},
+  year={1972},
+  volume={133},
+  pages={375-388}
+}
+
+@book{DBLP:books/daglib/0019512,
+  author    = {Andrew S. Tanenbaum and
+               Albert S. Woodhull},
+  title     = {Operating systems - design and implementation, 3rd Edition},
+  publisher = {Pearson Education},
+  year      = {2006},
+  isbn      = {978-0-13-142938-3},
+  timestamp = {Thu, 27 Apr 2017 16:04:05 +0200},
+  biburl    = {https://dblp.org/rec/books/daglib/0019512.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
